--- a/css/sections/grettings.css
+++ b/css/sections/grettings.css
@@ -1,27 +1,96 @@
 .grettings {
     background: url(../../img/grettings/IMAGE.png) no-repeat center;
+    padding-top: 30px;
 }
-.container {
-}
+
 .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
 .logo {
 }
 .nav {
 }
 .nav__list {
+    display: flex;
+    column-gap: 40px;
+    align-items: center;
 }
-.nav__item {
+.nav__item a{
+    color: white;
+    font-family: var(--fontlf);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 171%;
+    color: #fff;
 }
+
+.nav__item:last-child a{
+    border: 2px solid white;
+    padding: 11px 17px;
+    border-radius: 4px;
+}
+
 .nav__item_square {
+    height: 4px;
+    width: 4px;
+    background-color: white;
 }
+
 .desk {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 120px 0;
 }
+
 .desk__title {
+    font-family: var(--fontlf);
+    font-weight: 700;
+    font-size: 71px;
+    line-height: 110%;
+    letter-spacing: 0.01em;
+    text-align: center;
+    color: #fff;
 }
+
 .desk__text {
+    font-family: var(--fontIBM);
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 185%;
+    text-align: center;
+    color: #fff;
+    margin-top: 30px;
 }
+
 .btn {
+    background-color: var(--colorGreen);
+    padding: 15px 27px;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    font-family: var(--fontlf);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 187%;
+    text-align: center;
+    color: #fff;
+    transition: transform 1s;
 }
+
+.btn:hover{
+    transform: scale(1.2);
+}
+
+.nav__item a:hover{
+    color: var(--colorGreen);
+    border-color: var(--colorGreen);
+}
+
 .desk__btn {
+    margin-top: 60px;
+    
 }
