--- a/css/basic.css
+++ b/css/basic.css
@@ -21,7 +21,44 @@ li{
     list-style: none;
 }
 
+ul, ol{
+    margin: 0;
+    padding: 0;
+}
 
 .container{
     max-width: 1170px;
+    margin: 0 auto;
+}
+
+.main-text{
+    font-weight: 100;
+    color: #999;
+    font-size: 24px;
+    line-height: 150%;
+    font-family: var(--fontlf);
+}
+
+.main-text span{
+    color: black;
+    font-weight: 700;
+}
+
+.btn {
+    background-color: var(--colorGreen);
+    padding: 15px 27px;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    font-family: var(--fontlf);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 187%;
+    text-align: center;
+    color: #fff;
+    transition: transform 1s;
+}
+
+.btn:hover{
+    transform: scale(1.2);
 }
