--- a/css/sections/grettings.css
+++ b/css/sections/grettings.css
@@ -10,7 +10,13 @@
 }
 
 .logo {
+    transition: transform 1s;
 }
+
+.logo:hover{
+    transform: scale(1.2);
+}
+
 .nav {
 }
 .nav__list {
@@ -64,25 +70,6 @@
     text-align: center;
     color: #fff;
     margin-top: 30px;
-}
-
-.btn {
-    background-color: var(--colorGreen);
-    padding: 15px 27px;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-    font-family: var(--fontlf);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 187%;
-    text-align: center;
-    color: #fff;
-    transition: transform 1s;
-}
-
-.btn:hover{
-    transform: scale(1.2);
 }
 
 .nav__item a:hover{
