--- a/css/sections/services.css
+++ b/css/sections/services.css
@@ -11,11 +11,32 @@
 .services__list {
     margin-top: 54px;
     display: flex;
-    justify-content: center;
+    gap: 19px;
 }
 .services__item {
+    border: 1px solid #f7f7f7;
+    box-shadow: 0 5px 20px rgb(0, 0, 0, 0.05);
+    padding: 51px 56px 109px 41px;
+    transition: background-color 1s;
 }
+
 .services__title {
+    margin-top: 25px;
+    font-family: var(--fontlf);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: #000;
 }
 .service__text {
+    margin-top: 13px;
+    font-family: var(--fontIBM);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 171%;
+    color: #999;
+}
+
+.services__item:hover{
+    background-color: rgb(224, 224, 224);
 }
