--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,5 @@
 @import url(basic.css);
 @import url(sections/grettings.css);
 @import url(sections/services.css);
+@import url(sections/advert.css);
+@import url(sections/offers.css);
