--- a/css/sections/grettings.css
+++ b/css/sections/grettings.css
@@ -1,5 +1,5 @@
 .grettings {
-    background: url(../../img/grettings/IMAGE.png) no-repeat center;
+    background: url(../../img/grettings/IMAGE.png) no-repeat center/cover;
     padding-top: 30px;
 }
 
