--- a/css/sections/offers.css
+++ b/css/sections/offers.css
@@ -42,10 +42,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 110px;
 }
 .offers__info-text {
+    font-family: var(--fontlf);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    text-align: center;
+    color: #000;
 }
-.link {
-}
+
 .offers__link {
+    margin-top: 12px;
 }
