--- a/css/basic.css
+++ b/css/basic.css
@@ -12,6 +12,11 @@
 body, html{
     height: 100%;
     background-color: #f5f5f5;
+    overflow-x: hidden;
+}
+
+img{
+    max-width: 100%;
 }
 
 a{
@@ -30,6 +35,7 @@ ul, ol{
 .container{
     max-width: 1170px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 .main-text{
