--- a/css/sections/grettings.css
+++ b/css/sections/grettings.css
@@ -55,11 +55,12 @@
 .desk__title {
     font-family: var(--fontlf);
     font-weight: 700;
-    font-size: 71px;
+    font-size: clamp(2.813rem, 2.45rem + 1.656vi, 4.438rem);
     line-height: 110%;
     letter-spacing: 0.01em;
     text-align: center;
     color: #fff;
+
 }
 
 .desk__text {
@@ -80,4 +81,24 @@
 .desk__btn {
     margin-top: 60px;
     
+}
+
+.burger-menu {
+    display: none;
+    flex-direction: column;
+    row-gap: 5px;
+}
+.burger-menu__line {
+    width: 28px;
+    height: 2px;
+    background-color: white;
+    border-radius: 8px;
+}
+@media(max-width: 750px){
+    .nav__list{
+        display: none;
+    }
+    .burger-menu{
+        display: flex;
+    }
 }
